# sivtr

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  README.zh-CN.md  build.rs  install.ps1  install.sh
.claude/rules/: module-navigation.md
.claude/skills/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml
benches/: browse_dhat.rs  browse_hot.rs
changelogs/: 0.1.0.md  0.1.1.md  0.1.2.md  0.1.3.md  0.2.3.md  0.2.4.md  0.2.5.md  0.2.6.md  0.3.0.md
crates/sift-core/: Cargo.toml
crates/sift-core/src/: lib.rs
crates/sift-core/src/buffer/: line.rs  mod.rs  viewport.rs
crates/sift-core/src/capture/: mod.rs  pipe.rs  scrollback.rs
crates/sift-core/src/config/: mod.rs
crates/sift-core/src/export/: clipboard.rs  editor.rs  file.rs  mod.rs
crates/sift-core/src/history/: mod.rs  query.rs  schema.rs  store.rs
crates/sift-core/src/parse/: ansi.rs  unicode.rs
crates/sift-core/src/search/: mod.rs  navigator.rs
crates/sift-core/src/selection/: mode.rs
crates/sivtr-core/: Cargo.toml
crates/sivtr-core/src/: ai.rs  claude.rs  claude_export.rs  codex.rs  cursor.rs  hermes.rs  lib.rs  openclaw.rs  opencode.rs  pi.rs  record.rs  session.rs  time.rs  workspace.rs
crates/sivtr-core/src/agents/: claude.rs  codex.rs  cursor.rs  grok.rs  hermes.rs  jsonl.rs  mod.rs  model.rs  openclaw.rs  opencode.rs  pi.rs  sqlite.rs
crates/sivtr-core/src/buffer/: cursor.rs  line.rs  mod.rs
crates/sivtr-core/src/capture/: mod.rs  pipe.rs  scrollback.rs  subprocess.rs
crates/sivtr-core/src/config/: keys.rs  mod.rs
crates/sivtr-core/src/export/: clipboard.rs  editor.rs
crates/sivtr-core/src/history/: layer.rs  mod.rs  query.rs  schema.rs  store.rs
crates/sivtr-core/src/parse/: ansi.rs  mod.rs  unicode.rs
crates/sivtr-core/src/query/: mod.rs
crates/sivtr-core/src/record/: expand.rs  index.rs  mod.rs  model.rs  refs.rs
crates/sivtr-core/src/search/: matcher.rs  navigator.rs
crates/sivtr-core/src/selection/: extract.rs  mod.rs  mode.rs
crates/sivtr-core/src/session/: capture.rs  entry.rs
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/src/content/docs/: index.md
docs-site/src/content/docs/explanation/: architecture.md  local-first-privacy.md  session-model.md
docs-site/src/content/docs/playbooks/: agent-handoff.md  continue-after-interruption.md  fix-terminal-error.md  index.md  recent-work-timeline.md  remote-collaboration-memory.md
docs-site/src/content/docs/project/: documentation-maintenance.md  known-issues.md  release-notes.md  roadmap.md  sponsor.md
docs-site/src/content/docs/reference/: cli.md  config-file.md  data-locations.md  keybindings.md  selectors-and-filters.md  troubleshooting.md
docs-site/src/content/docs/start/: core-concepts.md  installation.md  quickstart.md
docs-site/src/content/docs/usage/: ai-sessions.md  browse-and-select.md  capture-output.md  codex-capture.md  configuration.md  copy-command-blocks.md  history.md  hotkey.md  launchers-and-hotkeys.md  remote-access.md  search-and-show.md  skills.md
docs-site/src/content/docs/zh-cn/: index.md
docs-site/src/content/docs/zh-cn/explanation/: architecture.md  local-first-privacy.md  session-model.md
docs-site/src/content/docs/zh-cn/playbooks/: agent-handoff.md  continue-after-interruption.md  fix-terminal-error.md  index.md  recent-work-timeline.md  remote-collaboration-memory.md
docs-site/src/content/docs/zh-cn/project/: documentation-maintenance.md  release-notes.md  roadmap.md  sponsor.md
docs-site/src/styles/: custom.css
editors/vscode/: .vscodeignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
editors/vscode/src/: commandLine.test.ts  commandLine.ts  extension.ts
packaging/homebrew/: sivtr.rb
skills/sivtr-memory/: SKILL.md
skills/sivtr-memory/examples/: agent-usage.md
skills/sivtr-memory/references/: commands.md  evidence.md  memory-model.md  output-discipline.md  patterns.md  workflows.md
src/: app.rs  cli.rs  command_blocks.rs  lib.rs  main.rs  output.rs
src/cli/: mcp.rs  mod.rs  remote.rs
src/commands/: browse.rs  clear.rs  codex.rs  command_block_selector.rs  config.rs  copy.rs  diff.rs  doctor.rs  filter.rs  flush.rs  history.rs  hotkey.rs  import.rs  init.rs  interactive.rs  layer.rs  migrate.rs  mod.rs  nav.rs  pair.rs  peer.rs  pipe.rs  records.rs  remote.rs  run.rs  search.rs  select.rs  serve.rs  show.rs  time_filter.rs  var.rs  version.rs  work.rs  work_json.rs  workspace.rs  workspace_json.rs  zoom.rs
src/commands/browse/: content.rs  help.rs  load.rs  mod.rs  nav.rs  panes.rs  perf.rs  picker.rs  selection.rs  text.rs  vim.rs  visual.rs
src/commands/capture/: browse.rs  clear.rs  copy.rs  diff.rs  import.rs  init.rs  mod.rs
src/commands/capture/copy/: vim.rs  workspace_picker.rs
src/commands/copy/: export.rs  load.rs  mod.rs  picker.rs  vim.rs  workspace_picker.rs
src/commands/memory/: context.rs  diff.rs  filter.rs  mod.rs  nav.rs  records.rs  search.rs  show.rs  var.rs  work.rs  work_json.rs  zoom.rs
src/commands/memory/copy/: export.rs  load.rs  mod.rs  plan.rs  project.rs
src/commands/memory/workset/: mod.rs  source.rs
src/commands/remote/: mod.rs  mounts.rs  peer.rs  serve.rs  share.rs  workspace.rs
src/commands/system/: doctor.rs  history.rs  hotkey.rs  mcp.rs  mod.rs  setup.rs  skill.rs
src/commands/terminal/: import.rs  init.rs  mod.rs  pipe.rs  run.rs
src/commands/workset/: mod.rs  source.rs  store.rs
src/mcp/: mod.rs  server.rs  types.rs
src/pane/: mod.rs  model.rs  sliding.rs  store.rs
src/remote/: client.rs  config.rs  daemon.rs  identity.rs  ipc.rs  local.rs  mod.rs  protocol.rs  redact.rs  state.rs
src/serve/: iroh.rs  mod.rs  redact.rs
src/tui/: conpty_tests.rs  content_io.rs  content_markdown.rs  content_view.rs  event.rs  mod.rs  pane.rs  render.rs  terminal.rs  theme.rs  workspace.rs  workspace_search.rs
src/tui/content/: io.rs  mod.rs  text.rs  view.rs
src/tui/views/: browse.rs  mod.rs  search.rs  status.rs
src/tui/workspace/: help.rs  layout.rs  mod.rs  model.rs  render.rs  tests.rs
(+21 files in other folders)
