[workspace]
members = ["crates/sivtr-core", "."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.88"

[package]
name = "sivtr"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal output workspace 鈥?capture, browse, search, select, and export terminal output"
default-run = "sivtr"

[[bin]]
name = "sivtr"
path = "src/main.rs"

[dependencies]
sivtr-core = { path = "crates/sivtr-core" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
atty = "0.2"
arboard = "3"
dirs = "5"
regex = "1"
similar = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "processenv", "processthreadsapi", "winbase", "winnt", "winuser", "windef", "minwindef"] }
